--- a/drafts.html
+++ b/drafts.html
@@ -10,7 +10,7 @@ title: Drafts
 	{% for post in site.posts %}
         {% if post.draft %}
 		<li><span>{{ post.date | date_to_string }}</span>  <a href="{{ post.url }}">{{ post.title }}</a></li>
-        {% endunless %}
+        {% endif %}
 		{% endfor %}
 	</ul>
 </div>
