--- a/archive.html
+++ b/archive.html
@@ -8,9 +8,9 @@ title: Archive
 <div id="post_links">
 	<ul>
 	{% for post in site.posts %}
-        {% if !post.draft %}
+        {% unless post.draft %}
 		<li><span>{{ post.date | date_to_string }}</span>  <a href="{{ post.url }}">{{ post.title }}</a></li>
-        {% endif %}
+        {% endunless %}
 		{% endfor %}
 	</ul>
 </div>
