--- a/index.html
+++ b/index.html
@@ -7,27 +7,30 @@ title: CDMoyer's Blog
 	<ul>
 		<li class="home"><a href="http://inarow.net/">CDMoyer's Home Page</a></li>
 	{% for post in site.posts offset: 0 limit: 15 %}
-        {% if !post.draft %}
+        {% unless post.draft %}
       <li><a href="{{ post.url }}">{{ post.title }}</a>
 		<br />
 		<div class="date">{{ post.date | date_to_string }}</div>
 	  </li>
-        {% endif %}
+        {% endunless %}
 
     {% endfor %}
 		<li><a href="/archive.html">Older Posts &raquo;</a></li>
 	</ul>
 </div>
 <div id="post">
-	{% for post in site.posts offset: 0 limit: 1 %}
-      {% if !post.draft %}
+	{% for post in site.posts offset: 0 limit: 5 %}
+      {% unless post.draft %}
+      {% unless shown %}
       <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
        {{ post.content }}
 
 	   <div style="font-size: .8em; color: #999">
       {{ post.date | date_to_string }}
 	  </div>
-      {% endif %}
+      {% assign shown = true %}
+      {% endunless %}
+      {% endunless %}
     {% endfor %}
 </div>
 <div style="clear: both"></div>
